--- a/themes/joshsj/source/styles/lib.css
+++ b/themes/joshsj/source/styles/lib.css
@@ -18,7 +18,7 @@
 /* katex */
 
 .katex {
-  font-size: 1.1em;
+  font-size: 1em;
 }
 
 .katex-display {
