--- a/themes/joshsj/source/styles/variables.css
+++ b/themes/joshsj/source/styles/variables.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=JetBrains+Mono:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,400&family=JetBrains+Mono:ital@0;1&display=swap");
 
 body {
   /* safari is fucking garbage so we're not using calc */
@@ -18,7 +18,7 @@ body {
   --fs-h2: calc(var(--fs-h3) * 1.3);
   --fs-h1: calc(var(--fs-h3) * 1.6);
 
-  --ff-normal: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  --ff-normal: "Karla", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   --ff-heading: var(--ff-normal);
   --ff-mono: "JetBrains Mono", ui-monospace, "Roboto Mono", Menlo, Monaco,
